--- a/assets/css/modern-theme.css
+++ b/assets/css/modern-theme.css
@@ -449,8 +449,37 @@ p {
     50% { transform: translateY(-10px); }
 }
 
+.img-holder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+
 .img-holder img {
     animation: float 6s ease-in-out infinite;
+    max-width: 100%;
+    height: auto;
+}
+
+/* Melhor alinhamento do header */
+.header .row {
+    min-height: 80vh;
+}
+
+.header .col-lg-6 {
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 991px) {
+    .img-holder {
+        margin-top: 30px;
+    }
+    
+    .header .row {
+        min-height: auto;
+    }
 }
 
 /* Melhorias visuais */
