--- a/assets/css/custom-fixes.css
+++ b/assets/css/custom-fixes.css
@@ -693,7 +693,7 @@
 
 /* Certificates Section Improvements */
 .certificates-description {
-    color: #f0f0f0 !important;
+    color: inherit !important;
     font-size: 1.2rem;
     font-weight: 500;
     line-height: 1.6;
