--- a/assets/css/custom-fixes.css
+++ b/assets/css/custom-fixes.css
@@ -814,12 +814,12 @@
 
 .card-course-name {
     color: #444444 !important;
-    font-size: 0.95rem;
-    font-weight: 400;
+    font-size: 1rem;
+    font-weight: 500;
     text-align: center;
     margin-bottom: 0;
+    margin-top: 0.8rem;
     line-height: 1.4;
-    opacity: 0.9;
 }
 
 .card-link {
@@ -862,6 +862,7 @@
     
     .card-course-name {
         font-size: 0.9rem;
+        margin-top: 0.6rem;
     }
 }
 
