--- a/assets/css/custom-fixes.css
+++ b/assets/css/custom-fixes.css
@@ -466,14 +466,15 @@
 }
 
 .page-footer .col-sm-6:last-child {
-    text-align: center;
+    text-align: right;
+    padding-right: 15px;
 }
 
 /* Garantir que os ícones sociais fiquem na mesma linha */
 .page-footer .socials {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     flex-wrap: nowrap;
     gap: 10px;
     margin-left: auto;
@@ -493,10 +494,16 @@
     .page-footer .col-sm-6 {
         text-align: center !important;
         margin-bottom: 1rem;
+        padding-right: 15px !important;
     }
     
     .page-footer .col-sm-6:last-child {
         margin-bottom: 0;
+        text-align: center !important;
+    }
+    
+    .page-footer .socials {
+        justify-content: center !important;
     }
 }
 
