--- a/assets/css/custom-fixes.css
+++ b/assets/css/custom-fixes.css
@@ -463,21 +463,34 @@
 /* Ajustes específicos para o footer */
 .page-footer .row {
     align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.page-footer .col-sm-6 {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-footer .col-sm-6:first-child {
+    justify-content: center;
 }
 
 .page-footer .col-sm-6:last-child {
-    text-align: right;
-    padding-right: 15px;
+    justify-content: flex-end;
+    padding-left: 20px;
 }
 
 /* Garantir que os ícones sociais fiquem na mesma linha */
 .page-footer .socials {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     flex-wrap: nowrap;
     gap: 10px;
-    margin-left: auto;
+    margin-left: 20px;
     max-width: none;
 }
 
@@ -494,16 +507,19 @@
     .page-footer .col-sm-6 {
         text-align: center !important;
         margin-bottom: 1rem;
-        padding-right: 15px !important;
+        justify-content: center !important;
+        padding-left: 0 !important;
     }
     
     .page-footer .col-sm-6:last-child {
         margin-bottom: 0;
         text-align: center !important;
+        justify-content: center !important;
     }
     
     .page-footer .socials {
         justify-content: center !important;
+        margin-left: 0 !important;
     }
 }
 
